Fixed some margin spacing

--- a/style3.css
+++ b/style3.css
@@ -69,13 +69,13 @@ nav ul li a:hover {
 }
 
 div#napa .section {
-  margin-left: 2em;
+  margin-left: 0em;
   padding-left: 3em;
   padding-right: 2em;
 }
 
 div#napa .section3 {
-  margin-left: 1em;
+  margin-left: 0em;
   padding-left: 2.5em;
   padding-right: 2em;
 }
@@ -148,7 +148,7 @@ div#napa .center {
   display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 95%;
+    width: 90%;
 }
 
 div#napa li.wineglass {
